Refactor multiple parameter calls on status update